# exam-ia

./: .env.example  .gitignore  .mcp.json  AppLogo.vue  README (1).md  README.md  __init__ (2).py  __init__ (4).py  __init__.py  auth.global.ts  deploy.sh  dev.sh  docker-compose.yml  document_extractor.py  download  ebc_chunk.py  embedding_service.py  forgot-password.vue  main.css  password_reset.py  pdf_service.py  pyproject.toml  r2_service.py  rag.vue  reset_db.sql  setup-project.sh  test_extractor.py  theme.js  user (5).py  user.py  wrangler.toml
back/: deploy.sh  pyproject.toml  requirements.txt  template.yaml
back/src/core/: auth.py  database.py
back/src/models/: password_reset.py  rag_document.py  user.py
back/src/repositories/: __init__.py  exam_repository.py  rag_document_repository.py  user.py
back/src/routes/: admin.py  auth.py  exams.py  generate.py
back/src/schemas/: auth.py
back/src/services/: __init__.py  async_exam_service.py  auth.py  document_extractor.py  pdf_service.py
front/: nuxt.config.ts  package.json  tailwind.config.js  wrangler.toml
front/app/assets/themes/: theme.js
front/app/layouts/: default.vue
front/app/pages/: forgot-password.vue  index.vue  login.vue  profile.vue  reset-password.vue
front/app/pages/admin/: rag.vue
front/app/plugins/: auth.ts
front/app/stores/: auth.ts  exam.ts
