[project]
name = "ExamIA"
version = "0.1.0"
description = ""
authors = [
    {name = "Edinson Mendoza",email = "emmendoza2794@gmail.com"}
]
package-mode = false
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.129.0,<1.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.41.0,<1.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
    "email-validator (>=2.1.0,<3.0.0)",
    "mangum (>=0.19.0,<1.0.0)",
    "pytz (>=2025.0,<2027.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "google-genai (>=2.4.0,<3.0.0)",
    "boto3 (>=1.43.11,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "reportlab (>=4.5.1,<5.0.0)",
]
